# RepoBuddy

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  vercel.json  wrangler.jsonc
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_enterprise_features.py
backend/app/: RepoBuddy.code-workspace  config.py  database.py  dependencies.py  main.py
backend/app/analysis/: __init__.py  evidence.py  identity_engine.py  impact_analyzer.py  quality_engine.py  repo_health.py  risk_surface.py  snapshot.py  stack_detector.py
backend/app/api/: ai.py  analysis.py  auth.py  documentation.py  enterprise.py  files.py  graph.py  impact.py  insights.py  intelligence.py  repositories.py  risk.py  router.py  search.py  teams.py  webhooks.py
backend/app/core/: exceptions.py  logging.py
backend/app/graph/: analyzer.py  builder.py
backend/app/models/: __init__.py  base.py  enterprise.py  repository.py
backend/app/parsers/: base.py  javascript.py  python.py  registry.py
backend/app/schemas/: ai.py  common.py  enterprise.py  intelligence.py  repository.py
backend/app/services/: ai_service.py  embedding_service.py  intelligence_service.py  repository_service.py  webhook_service.py
backend/app/workers/: celery_app.py  enterprise_tasks.py  tasks.py
backend/tests/: conftest.py  test_graph.py  test_impact_analyzer.py  test_parsers.py  test_repository_service.py
deploy/: Caddyfile  DEPLOY.md  bootstrap.sh  docker-compose.oracle.yml
frontend/: .dockerignore  Dockerfile  README.md  bun.lockb  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/app/: routes.tsx
frontend/src/app/components/: AnalyzeAnotherRepoModal.tsx  AnalyzePlaceholder.tsx  AppShell.tsx  Logo.tsx
frontend/src/app/ds/: Callout.tsx  Card.tsx  Confidence.tsx  Divider.tsx  EmptyState.tsx  Evidence.tsx  Label.tsx  MetricBar.tsx  Mono.tsx  Motion.tsx  PageHero.tsx  PageShell.tsx  ScoreRing.tsx  Section.tsx  SectionNav.tsx  Severity.tsx  Skeleton.tsx  Stat.tsx  Tag.tsx  index.ts  semantics.ts  tokens.ts
frontend/src/app/pages/: AIWorkspace.tsx.bak  AIWorkspacePage.tsx  Docs.tsx  DocsPage.tsx.redesign.bak  Files.tsx.bak  FilesPage.tsx  Graph.tsx  Graph.tsx.bak  Impact.tsx  Insights.tsx  IntelligenceReport.tsx  IntelligenceReportPage.tsx.redesign.bak  Landing.tsx  NotFoundPage.tsx  Overview.tsx  Progress.tsx.bak  ProgressPage.tsx  RiskAreas.tsx  SignIn.tsx  Upload.tsx.bak  UploadPage.tsx  _Dashboard_old.tsx.bak
frontend/src/components/: AppShell.tsx  CursorGlow.tsx  LiveGraph.tsx  Navigation.tsx
frontend/src/components/landing/: LandingFooter.tsx  SystemGrid.tsx  layout.ts
frontend/src/components/landing/capabilities/: LandingCapabilities.tsx
frontend/src/components/landing/cta/: LandingCta.tsx
frontend/src/components/landing/hero/: LandingHero.tsx
frontend/src/components/landing/process/: LandingProcess.tsx
frontend/src/hooks/: use-reveal.ts
frontend/src/imports/pasted_text/: reposage-design-spec.md
frontend/src/lib/: api.ts  motion.ts  store.ts
frontend/src/routes/: ai.tsx  dashboard.tsx  docs.tsx  files.tsx  graph.tsx  index.tsx  insights.tsx  progress.tsx  upload.tsx
frontend/src/styles/: fonts.css  theme.css
(+3 files in other folders)
